use java 21 features